--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=servicioreportes
+server.port=8083
+
+spring.datasource.url=jdbc:mysql://localhost:3306/reportesdb
+spring.datasource.username=root
+spring.datasource.password=
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
