--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,10 @@
-spring.application.name=servicioreportes
-server.port=8083
-
-spring.datasource.url=jdbc:mysql://localhost:3306/reportesdb
+spring.datasource.url=jdbc:mysql://localhost:3306/db_servicioreporte
 spring.datasource.username=root
 spring.datasource.password=
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
